skip hidden files and directories in mongodump SERVER-2000